Archive2/70/1733cf14e2248f/output
main.cpp: In function ‘int main()’:
main.cpp:6:45: error: invalid use of ‘void’
         throw throw throw throw throw throw 1;
                                             ^
