Archive2/70/1733cf14e2248f/main.cpp


int main()
{
    try {
        throw throw throw throw throw throw 1;
    } catch (int) {
    
    }
}